# splink-snowflake

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  connecting.md  contributing.md  getting_started.md  installation.md  introduction.md  snowflake_specifics.md  usage.md
src/splink_snowflake/: __init__.py  database_api.py  dataframe.py  dialect.py
test/: conftest.py  linker_utils.py  test_snowflake_e2e.py  test_snowflake_io.py
tests/: conftest.py  linker_utils.py  test_custom_udf.py  test_snowflake_e2e.py  test_snowflake_io.py
