[project]
name = "splink-snowflake"
version = "0.1.1"
description = "Snowflake backend support for Splink"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "splink>=4.0.16",
    "snowflake-connector-python[pandas]>=4.3.0"
]
keywords = [
    "data linking",
    "record linkage",
    "entity resolution",
    "deduplication",
    "fuzzy matching",
]
license = {text = "MIT License"}
authors = [
    {"name" = "Lawrence Adams"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3"
]
